[package]
name = "git2codeblock"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "Turn GitHub and GitLab codesnippet URLs into Markdown codeblocks"
documentation = "https://docs.rs/git2codeblock"
readme = "README.md"
homepage = "https://github.com/ewpratten/git2codeblock"
repository = "https://github.com/ewpratten/git2codeblock"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
url = "2.2"
thiserror = "1.0"
regex = "1"

[dev-dependencies]
tokio-test = "0.4"